--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
+    // timber
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     // test
     testImplementation 'junit:junit:4.+'
